# image-service

./: .env.example  Dockerfile  README.md  pyproject.toml  run.py  settings.py
.github/workflows/: merge-with-master.yml  pull-request.yml
api/: app.py  depends.py
api/middlewares/: errors.py  logging.py
api/routes/v1/: app.py
api/routes/v1/handlers/: images.py  models.py  params.py
load_tests/: get_image.js  test.js
src/dal/file_storage/: base.py  disk.py  s3.py
src/service/: images.py
src/utils/: resize_image.py
src/utils/image/: resize.py  types.py  utils.py
src/utils/logging/: config.py  formatter.py  init_logger.py
tests/: conftest.py
tests/api/v1/: test_add_image.py  test_get_image.py  test_get_original_image.py
tests/utils/: test_get_content_type.py  test_get_extention.py  test_resize_image.py
